--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=change_me
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 68.183.89.174
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=hello_django_prod
 SQL_USER=hello_django
