--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
 # Setting File
 
-# c_suite_be/settings.py
-
-# */c_suite_be/settings.py
-# c_suite_be/c_suite_be/settings.py
-
 # */migrations/
 */migrations/*.py
 *.pyc 
 
 .vscode/
 
+# Ignore Django migration files
+**/migrations/*.py
+**/migrations/*.pyc
+**/migrations/__pycache__/
 
+# Ignore database files (if you use SQLite)
+*.sqlite3
+*.db
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
