--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 oauthlib==3.2.2
 packaging==23.1
+Pillow==10.0.0
 psycopg2-binary==2.9.6
 pycparser==2.21
 PyJWT==2.7.0
