--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 dj-rest-auth==4.0.1
 Django==4.2.2
 django-allauth==0.54.0
+django-countries==7.5.1
 djangorestframework==3.14.0
 drf-yasg==1.21.5
 idna==3.4
