--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,6 +10,7 @@ dj-rest-auth==4.0.1
 Django==4.2.2
 django-allauth==0.54.0
 django-countries==7.5.1
+django-extensions==3.2.3
 djangorestframework==3.14.0
 drf-yasg==1.21.5
 idna==3.4
