--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.7.2
+CacheControl==0.14.0
+cachetools==5.3.3
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -7,38 +9,17 @@ coreschema==0.0.4
 cryptography==41.0.1
 defusedxml==0.7.1
 dj-rest-auth==4.0.1
-Django==4.2.2
+Django==3.2.15
 django-allauth==0.54.0
+django-cors-headers==4.3.0
 django-countries==7.5.1
 django-extensions==3.2.3
 django-filter==23.2
+django-google-auth==0.4.0
 djangorestframework==3.14.0
-drf-yasg==1.21.5
-idna==3.4
-inflection==0.5.1
-itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-oauthlib==3.2.2
-packaging==23.1
-Pillow==10.0.0
-psycopg2-binary==2.9.6
-pycparser==2.21
-PyJWT==2.7.0
-python3-openid==3.2.0
-pytz==2023.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-ruamel.yaml==0.17.31
-ruamel.yaml.clib==0.2.7
-sqlparse==0.4.4
-typing_extensions==4.6.3
-uritemplate==4.1.1
-urllib3==2.0.2
 drf-extra-fields==3.7.0
-django-cors-headers==4.3.0
-CacheControl==0.14.0
-cachetools==5.3.3
+drf-yasg==1.21.5
+filetype==1.2.0
 firebase-admin==6.5.0
 google-api-core==2.19.1
 google-api-python-client==2.136.0
@@ -53,11 +34,33 @@ googleapis-common-protos==1.63.2
 grpcio==1.64.1
 grpcio-status==1.62.2
 httplib2==0.22.0
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 msgpack==1.0.8
+oauth2client==4.1.3
+oauthlib==3.2.2
+packaging==23.1
+Pillow==10.0.0
 proto-plus==1.24.0
 protobuf==4.25.3
+psycopg2-binary==2.9.6
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycparser==2.21
+PyJWT==2.7.0
 pyparsing==3.1.2
+python3-openid==3.2.0
+pytz==2023.3
+requests==2.31.0
+requests-oauthlib==1.3.1
 rsa==4.9
+ruamel.yaml==0.17.31
+ruamel.yaml.clib==0.2.7
+six==1.16.0
+sqlparse==0.4.4
+typing_extensions==4.6.3
 uritemplate==4.1.1
+urllib3==2.0.2
