stripe payment added

--- a/.env.prod
+++ b/.env.prod
@@ -10,7 +10,9 @@ SQL_PORT=5432
 DATABASE=postgres
 LOCAL=False
 
-
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
 
 FIREBASE_TYPE=
 FIREBASE_PROJECT_ID=
