--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./app
       dockerfile: Dockerfile.prod
     # command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "chmod +x /usr/src/app/entrypoint.sh && /usr/src/app/entrypoint.sh && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - static_volume:/usr/src/app/staticfiles
       - media_volume:/usr/src/app/media
@@ -15,16 +15,23 @@ services:
     env_file:
       - ./.env.prod
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - 8000:8000
+    restart: on-failure
   db:
     restart: always
-    image: postgres
+    image: postgres:13-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql
     env_file:
       - ./.env.prod.db
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U hello_django -d hello_django_prod"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   nginx:
     build: ./nginx
