--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -12,8 +12,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install system dependencies including netcat
-RUN apt update && apt install -y netcat-openbsd postgresql-client
-#     && apt add postgresql-dev gcc python3-dev musl-dev
+RUN apt-get update && apt-get install -y netcat-openbsd postgresql-client && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # install dependencies
 RUN pip install --upgrade pip
